--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -1,7 +1,7 @@
 .container {
   height: 100vh;
   max-width: 992px;
-  margin: 0 auto; /* centralizes the div */
+  margin: 0 auto;
   padding: 2.5rem 2rem;
 
   display: flex;
